# AWADA

./: .gitignore  .pre-commit-config.yaml  LICENSE  METHODOLOGICAL_IMPROVEMENTS.md  README.md  evaluate_detector.py  generate_attention_maps.py  implementation_plan.md  pyproject.toml  requirements.txt  stylize_dataset.py  train_awada.py  train_cycada.py  train_cyclegan.py  train_detector.py  visualize_inference.py
.github/workflows/: ci.yml
awada/: config.py
awada/conf/: __init__.py
awada/datasets/: attention_dataset.py  bdd100k.py  cityscapes.py  foggy_cityscapes.py  sim10k.py  unpaired_dataset.py
awada/models/: __init__.py  awada.py  constants.py  cycada.py  cyclegan.py  discriminator.py  generator.py  semantic_loss.py
awada/utils/: __init__.py  attention.py  metrics.py  train_utils.py  transforms.py
configs/: awada.yaml  cycada.yaml  cyclegan.yaml  evaluate_detector.yaml  generate_attention_maps.yaml  stylize_dataset.yaml  train_awada.yaml  train_cycada.yaml  train_cyclegan.yaml  train_detector.yaml  visualize_inference.yaml
configs/benchmark/: cityscapes_to_bdd100k.yaml  cityscapes_to_foggy.yaml  sim10k_to_cityscapes.yaml
configs/dataset/: bdd100k.yaml  (+2 more)
scripts/: exp_a_baseline.ps1  exp_a_baseline.sh  exp_b_cycada.ps1  exp_b_cycada.sh  exp_b_cyclegan.ps1  exp_b_cyclegan.sh  exp_c_awada.ps1  exp_c_awada.sh  exp_d_oracle.ps1  exp_d_oracle.sh  run_all.sh
tests/: test_amp.py  test_attention.py  test_attention_dataset.py  test_awada.py  test_awada_cyclegan.py  test_bdd100k.py  test_cityscapes.py  test_config.py  test_cycada.py  test_cyclegan.py  test_discriminator.py  test_evaluate_detector.py  test_generator.py  test_metrics.py  test_set_seed.py  test_setup_logging.py  test_sim10k.py  test_train_guards.py  test_training_smoke.py  test_transforms.py  test_unpaired_dataset.py
tools/: evaluate_detector.py  generate_attention_maps.py  stylize_dataset.py  train_awada.py  train_cycada.py  train_cyclegan.py  train_detector.py  visualize_inference.py
(+31 files in other folders)
