[project]
name = "awada"
version = "0.1.0"
description = "AWADA: Foreground-focused adversarial learning for cross-domain object detection"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "scipy>=1.7.0",
    "tqdm>=4.62.0",
    "pycocotools>=2.0.7",
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["awada"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
